# TensorFlow_ProofOfConcept

./: .gitignore  CMakeLists.txt  README.md
include/: NMT_Model.hpp
source/: CMakeLists.txt  NMT_Model.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
